# Media-Demo-Recreation

./: CMakeLists.txt  MediaDemoRecreation.sln  README.md
MediaDemoRecreation/: MediaDemoRecreation.vcxproj  MediaDemoRecreation.vcxproj.filters  dllmain.c
MediaDemoRecreation/Objects/Global/: APICallback.h  ActClear.c  ActClear.h  Animals.h  Camera.h  DebugMode.h  GameOver.c  GameOver.h  HUD.h  ItemBox.c  ItemBox.h  Localization.h  Music.h  PauseMenu.c  PauseMenu.h  Player.c  Player.h  SaveGame.h  StarPost.c  StarPost.h  Zone.h
MediaDemoRecreation/Objects/Helpers/: MathHelpers.h  TimeAttackData.c  TimeAttackData.h
MediaDemoRecreation/Objects/Menu/: DemoMenu.h  MenuParam.h  UIButton.c  UIButton.h  UIControl.h  UIPicture.c  UIPicture.h
MediaDemoRecreation/Objects/Title/: TitleLogo.h  TitleSetup.c  TitleSetup.h  TitleSonic.h
